--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,9 @@
       <div ui-view></div>
     </div>
     <!-- Dependencies -->
+    <script async defer
+     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCugyBVwSkxtX3qxbs2QQLC23oMop5aTy&callback=initMap">
+    </script>
     <script src="/public/lib/jquery/dist/jquery.min.js"></script
     <script src="/public/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/public/lib/angular/angular.js"></script>
